[package]
name = "space2"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true


[features]
alloc = []
std = ["alloc"]
default = ["std"]
#docsrs = []
serde = ["dep:serde","dep:serde_with_macros"]
parse= []
tokio = ["dep:tokio"]



[package.metadata.docs.rs]
features = ["alloc", "std", "docsrs"]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
derive-name = { workspace = true }
derive_builder = { workspace = true }
convert_case = { workspace = true }
semver = { workspace = true }
eyre = { workspace = true }
thiserror= { workspace = true }
miette = { workspace = true }
strum = { workspace = true }
strum_macros= { workspace = true }
async-trait = { workspace = true }
#heck = { workspace = true }


## serde
serde_with_macros = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
num = "0.4.3"
serde_derive = "1.0.210"
once_cell = "1.20.2"
tokio= { workspace = true, optional = true }

[lib]
name = "space2"
path = "src/lib.rs"