[package]
name = "starlane-hyperspace"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true




[dependencies]
starlane-space = { workspace = true  }
starlane-macros = { workspace = true  }
starlane-primitive-macros = { workspace = true}


thiserror = { workspace = true}
lazy_static = {  workspace=true  }
uuid = { workspace=true, features=["v4"] }
chrono = { workspace=true, features=["serde"] }
tokio = { workspace=true, features = ["full"] }
tokio-util = { workspace=true}
async-trait = {workspace = true}
ctrlc = {workspace = true}
bincode = {workspace = true}
strum =  {workspace = true}
strum_macros = {workspace = true}
wasmer = {workspace = true}
wasmer-compiler-singlepass = {workspace = true}
wasmer-wasix = {workspace = true}
itertools = {workspace = true}
#acid-store = {git="https://github.com/uberscott/acid-store.git" , version="0.14.2" }
tempdir = { workspace=true }

once_cell = { workspace=true }
zip = { workspace=true}
dirs ={ workspace=true}
ascii ={ workspace=true }
url ={ workspace=true }

# hyper requirements
futures = {workspace=true, default-features = true}
dashmap = {workspace=true }
semver = { workspace=true, features=['serde']}



# postgres deps
sqlx = { workspace = true, features = [ "runtime-tokio","runtime-tokio-rustls", "postgres", "macros", "any" ]}
serde = { workspace = true, features=['derive','rc']}
async-recursion = { workspace = true}


rcgen = { workspace = true, features=["pem", "x509-parser" ]}
rustls = { workspace = true, features=["aws_lc_rs"]}
rustls-pemfile = { workspace = true }
tokio-rustls =  { workspace = true}
tls-api-rustls =  { workspace = true}

text_io = { workspace = true}
clap =  { workspace = true , features=["derive"]}
walkdir = { workspace = true }

ariadne = { workspace = true }
nom ={ workspace = true }
nom-supreme = { workspace = true }
nom_locate = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
enum-ordinalize = { workspace = true }
convert_case = { workspace = true }
validator = { workspace = true }


threadpool ={ workspace = true }
oneshot = { workspace = true }


anyhow = { workspace = true }
##virtual-fs ={ workspace = true }

quinn ={ workspace = true }
webpki-roots = { workspace = true}
path-clean = { workspace = true}
thiserror-context = { workspace = true }
rustyline = { workspace = true, features=["with-file-history", "with-dirs"]}
cliclack = { workspace = true }

serde_yaml = { workspace = true }
derive_builder = { workspace=true }
postgresql_embedded = { workspace=true }
text-to-ascii-art = { workspace = true}
colored = {workspace = true}
lerp = { workspace = true, features=["derive"] }
atty ={workspace = true}
#rolling-file = {workspace = true}
termsize = {workspace = true}
port_check = {workspace = true}
crossterm = {workspace = true}
#log= {workspace = true}
textwrap = {workspace = true}
console = {workspace = true}
derive-name = {workspace = true}

#tracing = { workspace = true, features=["std","log","attributes","tracing-attributes","max_level_trace"]}
tracing = { workspace = true, features=["std","log","attributes","tracing-attributes","async-await"]}

tracing-subscriber = { workspace = true, features = ["default"]}
tracing-attributes= { workspace = true,  features=["async-await"]}
tracing-core= { workspace = true,  features = ["valuable","default"] }


[lib]
name = "starlane"
path= "../starlane/src/hyperspace/lib.rs"
