[package]
name = "mechtron-common"
authors = ["Scott Williams <scott@mightydevco.com>"]
version = "0.1.0"
edition = "2018"
description = "Common Source for Mechtrons used by Wasm guests and hosts"
homepage = "http://starlane.io"
repository = "https://github.com/mechtronium/starlane"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.69", features=['derive','rc'] }
mesh-portal-serde = { path = "../../../mesh-portal/rust/mesh-portal-serde", version="0.0.1"}
mesh-portal-api= { path = "../../../mesh-portal/rust/mesh-portal-api", version="0.0.1"}
bincode = "1.3.3"
