[package]
name = "mechtron"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"
homepage = "http://starlane.io"
repository = "https://github.com/mechtronium/starlane"
license = "MIT"
description = "The Wasm Package to help easily create a Mechtron"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.76"
mechtron-common = { path = "../mechtron-common", version="0.1.0"}
lazy_static = "1.4.0"
wasm_membrane_guest = { path = "../wasm_membrane_guest", version="0.1.0"}
starlane-resources= { path = "../starlane-resources", version="0.1.0"}

serde_json = "1.0.61"
serde = { version="1.0.69", features=['derive','rc'] }

getrandom = { version = "0.2.3", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"