[package]
name = "space2"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true

[features]
std=[]

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
anyhow = "1.0.89"
async-trait = "0.1.83"

ariadne={workspace=true }

tokio = "1.40.0"

