[package]
name = "space2"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true

[features]
default=["parse"]
std=[]
#parse=["dep:nom","dep:nom-supreme","dep:nom_locate"]
#//parse=["dep:nom-supreme","dep:nom_locate"]
parse=["std"]
parse-report=["dep:ariadne"]
serde=["dep:serde"]
async=["dep:async-trait","dep:tokio"]

[dependencies]
starlane-primitive-macros = { workspace = true }


#feature 'parse'
nom-supreme =  { version="0.8.0"}
nom_locate = { version="4.2.0" }

#feature 'parse-report'
ariadne={workspace=true, optional = true }

#feature 'serde'
serde = { version = "1.0.210", features = ["derive"], optional = true }

#feature: 'async'
tokio = { version="1.40.0", optional = true }
async-trait = { version="0.1.83",optional = true }


#thiserror = "1.0.63"
thiserror-no-std = "2.0.2"
anyhow = "1.0.89"





strum_macros = "0.26.4"


strum = "0.26.3"
log = "0.4.22"


[dependencies.nom]
workspace= true
default-features = false
features = ["alloc"]
#optional=true