[package]
name = "space2"
version = "0.0.1"
edition = "2021"
rust-version = "1.81.0"
authors = []
homepage = "https://starlane.io"
description="The Workspace package for Starlane.  What to see: './starlane-space' contains the "


[features]
default=["parse"]
std=[]
#parse=["dep:nom","dep:nom-supreme","dep:nom_locate"]
#//parse=["dep:nom-supreme","dep:nom_locate"]
alloc=["nom/alloc", "nom_locate/alloc", "nom-supreme/alloc"]
parse=["dep:nom", "dep:nom-supreme", "dep:nom_locate"]
parse-report=["dep:ariadne"]
serde=["dep:serde"]
async=["dep:async-trait","dep:tokio"]

[dependencies]
starlane-primitive-macros = { path= "../starlane-primitive-macros"}

#feature 'parse'
nom-supreme =  { path="../../../../other/nom-supreme", default-features = false, optional = true}
nom_locate = { version="4.2.0" ,default-features = false, optional=true}

#feature 'parse-report'

ariadne = {  version="0.1.5" , optional = true}

#feature 'serde'
serde = { version = "1.0.210", features = ["derive"], optional = true }

#feature: 'async'
tokio = { version="1.40.0", optional = true }
async-trait = { version="0.1.83",optional = true }


#thiserror = "1.0.63"
thiserror-no-std = "2.0.2"
anyhow = "1.0.89"





strum_macros = "0.26.4"


strum = "0.26.3"
log = "0.4.22"

nom = {version="7.1.3", default-features = false, optional=true}



[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[profile.test]
panic = 'abort'
