[package]
name = "starlane-core"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"
description = "Resource Mesh"
homepage = "http://starlane.io"
repository = "https://github.com/mechtronium/starlane"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
serde = { version="1.0.69", features=['derive','rc'] }
#serde_json = "1.0"
serde_json = "1.0.61"
futures = "0.3.13"
log = "0.4.14"
async-trait = "0.1.48"
url = "2.2.1"
lru = "0.6.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
#sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
#sqlite = "0.26.0"
rusqlite = "0.25.3"
bincode = "1.3.3"
lazy_static = "1.4.0"
semver = "0.11.0"
base64 = "0.13.0"
error-chain = "0.12.4"
validate = "0.6.1"
notify = "4.0.17"
walkdir = "2.3.2"
actix-web = "3.3.2"
#actix-http = "2.2.0"
#actix-rt= "1.1.1"
#actix-server= "1.0.0"
tempdir = "0.3.7"
zip = "0.5.13"
nom = "6.2.1"
mysql = "20.1.0"
tracing = "0.1.26"
#tracing-core = "0.1.18"
tracing-subscriber = '0.2.19'
tracing-futures = "0.2.5"
strum = "0.21.0"
strum_macros = "0.21.1"
ctrlc = { version="3.1.9", features=["termination"] }
clap = { version="2.33", features=["yaml"] }
yaml-rust = "0.3.5"
tempfile = "3.2.0"

kube = { version = "0.57.0", features = ["derive","native-tls"], default-features = false}
kube-runtime = "0.57.0"
kube-derive = { version = "0.57.0", default-features = false } # only needed to opt out of schema
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
schemars = "0.8.0"
json-patch = "0.2.6"
