[package]
name = "starlane-fs"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"
description = "A Starlane implementation that supports filesystems"
homepage = "http://starlane.io"
repository = "https://github.com/mechtronium/starlane"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
