[package]
name = "starlane-macros-test"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlane-macros = { path = "../starlane-macros" }
serde = { version="1.0.69", features=['derive','rc'] }
starlane-core = { path = "../starlane-core" }
nom = "6.2.1"
