[package]
name = "starlane-macros"
description = "macros for starlane.io"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
doctest = false

[dependencies]

starlane-space = { workspace = true , version = "0.3.16" }
lazy_static = { workspace = true}
syn = { workspace = true, features = ["full"] }
quote = { workspace = true}
proc-macro2 = {workspace = true}
strum = { workspace = true}
strum_macros = { workspace = true }
regex =  { workspace = true}
nom = { workspace = true}
nom-supreme = { workspace = true }
nom_locate = { workspace = true}
serde = { workspace = true}
chrono = { workspace = true, features=["serde"] }
uuid = { workspace = true, features=["v4"] }
