[package]
name = "starlane-parse"
description = "Is a collection of utilities for making using the great [nom](https://crates.io/crates/nom) parser combinator easier to use."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
nom = "7"
nom-supreme = "0.6.0"
nom_locate = "4.0.0"
serde = { version="1.0.69", features=['derive','rc'] }
