[package]
name = "starlane-parse"
description = "Is a collection of utilities for making using the great [nom](https://crates.io/crates/nom) parser combinator easier to use."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
nom = { workspace = true}
nom-supreme ={ workspace = true}
nom_locate ={ workspace = true}
serde = { workspace = true, features=['derive','rc'] }
thiserror = { workspace = true}