[package]
name = "starlane-primitive-macros"
description = "Some primitive macros needed to jump start starlane"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true




[lib]
proc-macro = true
doctest = false

[dependencies]

syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
