[package]
name = "starlane-resources"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlane-macros = { path = "../starlane-macros" }
serde = { version="1.0.69", features=['derive','rc'] }
nom = "7"
bincode = "1.3.3"
semver = "0.11.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
strum = "0.21.0"
strum_macros = "0.21.1"

#this is unwanted, but needed for now.  eventually need to move all rusqlite references to starlane
rusqlite = "0.25.3"
