[package]
name = "starlane-space"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = """
The 'Space' portion of starlane as opposed to hyperspace.

This is where 3rd parties customize Starlane's behavior with WebAssembly and external executables.

To develop a starlane driver please look in `./starlane` which holds the 'hyperspace' code (which provides infrastructure)"
"""


[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starlane-primitive-macros = { workspace = true }

serde = { workspace=true, features=['derive','rc'] }
semver = { workspace = true, features=['serde'] }
tokio = { workspace=true, features = ["rt","sync","time"] }
url = { workspace = true, features=["serde"] }

thiserror={workspace=true }

tokio_print = { workspace = true }
ariadne={workspace=true }
async-trait={workspace=true }
lazy_static={workspace=true }
strum={workspace=true }
strum_macros={workspace=true }
nom={workspace=true }
nom-supreme={workspace=true }
nom_locate={workspace=true }
bincode={workspace=true }
regex={workspace=true }
serde_json={workspace=true }
dashmap={workspace=true }
serde_urlencoded={workspace=true }
enum-ordinalize={workspace=true }
convert_case={workspace=true }
validator={workspace=true }
once_cell={workspace=true }
md-5 = {workspace=true }
anyhow = "1.0.89"



#uuid={workspace=true }
#getrandom={workspace=true }
#chrono={workspace=true }
