[package]
name = "starlane"

description = "Starlane -- An Orchestration and Infrastructure Framework for WebAssembly Components (https://starlane.io)"


version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full=["server"]
default=["server"]
#server=["space","service","hyperspace", "hyperlane","postgres", "hyperlane-tcp", "cli", "dep:threadpool", "dep:oneshot", "dep:anyhow", "dep:virtual-fs"]
server=["space","service","hyperspace", "hyperlane","postgres", "hyperlane-tcp", "cli", "dep:threadpool", "dep:oneshot", "dep:anyhow"]
cli=["dep:text_io","dep:clap", "dep:walkdir", "parse"]
hypererr=[]
hyperspace=["dep:futures","dep:dashmap","dep:semver", "parse", "dep:zip","hypererr"]
hyperlane=["hypererr"]
hyperlane-tcp =  ["hyperlane","dep:rcgen","rustls","dep:tokio-rustls","dep:tls-api-rustls"]
hyperlane-quic =  ["hyperlane","dep:rcgen","rustls", "dep:quinn"]
postgres=[ "dep:sqlx","dep:serde","dep:tracing","dep:async-recursion" ]
parse=["dep:nom", "dep:nom-supreme", "dep:nom_locate"]
rustls=["dep:rustls","dep:rcgen","rustls-pemfile"]
driver=["hyperspace"]
dialect=[]
dialect-cli=["dialect","dep:clap"]
service=[]
space=[]
wasm=[]

[dependencies]
starlane-space = { workspace = true}
starlane-macros = { workspace = true }
starlane-parse= { workspace = true }
starlane-primitive-macros = { workspace = true}
thiserror = { workspace = true}
tokio_print= {  workspace=true  }
lazy_static = {  workspace=true  }
uuid = { workspace=true, features=["v4"] }
chrono = { workspace=true, features=["serde"] }
tokio = { workspace=true, features = ["full"] }
tokio-util = { workspace=true}
async-trait = {workspace = true}
ctrlc = {workspace = true}
bincode = {workspace = true}
strum =  {workspace = true}
strum_macros = {workspace = true}
wasmer = {workspace = true}
wasmer-compiler-singlepass = {workspace = true}
wasmer-wasix = {workspace = true}
itertools = {workspace = true}
acid-store = {git="https://github.com/uberscott/acid-store.git" , version="0.14.2" }
tempdir = { workspace=true }

once_cell = { workspace=true }
zip = { workspace=true, optional = true }
dirs ={ workspace=true}
ascii ={ workspace=true }
url ={ workspace=true }

# hyper requirements
futures = {workspace=true, default-features = true, optional=true }
dashmap = {workspace=true, optional = true}
semver = { workspace=true, features=['serde'], optional = true }


# postgres deps
sqlx = { workspace = true, features = [ "runtime-tokio-rustls", "postgres", "macros", "any" ], optional = true }
serde = { workspace = true, features=['derive','rc'], optional=true }
tracing = { workspace = true, optional = true}
async-recursion = { workspace = true, optional=true }


rcgen = { workspace = true, optional = true, features=["pem", "x509-parser" ]}
rustls = { workspace = true, optional = true, features=["aws_lc_rs"]}
rustls-pemfile = { workspace = true, optional = true }
tokio-rustls =  { workspace = true, optional = true}
tls-api-rustls =  { workspace = true, optional = true}

text_io = { workspace = true, optional = true}
clap =  { workspace = true, optional = true , features=["derive"]}
walkdir = { workspace = true, optional = true }

ariadne = { workspace = true, optional = true }
nom ={ workspace = true, optional = true }
nom-supreme = { workspace = true, optional = true }
nom_locate = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_urlencoded = { workspace = true, optional = true }
enum-ordinalize = { workspace = true, optional = true }
convert_case = { workspace = true, optional = true }
validator = { workspace = true, optional = true }


threadpool ={ workspace = true, optional = true }
oneshot = { workspace = true, optional = true }


anyhow = { workspace = true, optional = true }
##virtual-fs ={ workspace = true, optional = true }

quinn ={ workspace = true, optional = true }
webpki-roots = { workspace = true}
[lib]
name = "starlane"
path= "src/lib.rs"


[[bin]]
name = "starlane"
doc = false
path = "src/main.rs"