[package]
name = "wasm_membrane_guest"
version = "0.1.0"
authors = ["Scott Williams <scott@mightydevco.com>"]
edition = "2018"
license = "MIT"
homepage ="http://starlane.io/"
repository = "https://github.com/mechtronium/starlane"
description = "Host environment to facilitate communication with Wasm"


[dependencies]
wasm-bindgen = "0.2.63"
lazy_static = "1.4.0"
