[package]
name = "hello"
version = "0.1.0"
authors = ["{{username}}"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mechtron= { path="../../rust/mechtron/mechtron" }
cosmic-space = { path="../../rust/cosmic/cosmic-space" }
cosmic-macros = { path="../../rust/cosmic/cosmic-macros" }
cosmic-macros-primitive = { path="../../rust/cosmic/cosmic-macros-primitive" }
lazy_static = "1.4.0"
handlebars = "4.3.5"
serde_json = "1.0.87"
bincode = "1.3.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
