[package]
name = "starlane-platform-for-postgres"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
version.workspace = true

[dependencies]
starlane-base-common = {workspace = true}
starlane-space = { workspace = true }
starlane-hyperspace = { workspace = true }
url  = { workspace = true }
thiserror = {workspace = true}
tokio = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
sqlx = {workspace = true}
async-trait = {workspace = true}
