[package]
name = "cosmic-cli"
version = "0.4.0-alpha1"
edition = "2021"

authors = ["Scott Williams <scott@starlane.io>"]
description = "The Cosmic Cli provides command line inerface to access a running server enabled with The Cosmic Initiative framework http://thecosmicinitiative.io"
homepage = "http://thecosmicinitiative.io"
repository = "https://github.com/cosmic-initiative/cosmic-initiative"
license = "MIT"

[[bin]]
name = "cosmic"
path = "src/main.rs"

[dependencies]

cosmic-hyperlane={ path="../cosmic-hyperlane",version = "0.4.0-alpha1"}
cosmic-hyperlane-tcp={ path="../cosmic-hyperlane-tcp",version = "0.4.0-alpha1"}
cosmic-space= { path= "../cosmic-space" ,version = "0.4.0-alpha1"}
cosmic-hyperspace= { path= "../cosmic-hyperspace" ,version = "0.4.0-alpha1"}
cosmic-nom= { path="../cosmic-nom",version = "0.4.0-alpha1"}
clap = { version="3.2.22", features=["cargo"] }
tokio = { version = "1.15.0", features = ["rt"] }
dirs= "4.0.0"
zip = "0.6.3"
walkdir = "2.3.2"
nom = "7"
serde = "1.0.147"
lazy_static = "1.4.0"
serde_json = "1.0.89"