[package]
name = "cosmic-cli"
description = "The Cosmic Cli provides command line inerface to access a running server enabled with The Cosmic Initiative framework http://thecosmicinitiative.io"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true



[[bin]]
name = "cosmic"
path = "src/main.rs"

[dependencies]

cosmic-hyperlane={ path="../cosmic-hyperlane",version = "0.3.6"}
cosmic-hyperlane-tcp={ path="../cosmic-hyperlane-tcp",version = "0.3.6"}
cosmic-space= { path= "../cosmic-space" ,version = "0.3.6"}
cosmic-hyperspace= { path= "../cosmic-hyperspace" ,version = "0.3.6"}
cosmic-nom= { path="../cosmic-nom",version = "0.3.6"}
text_io = "0.1.12"
clap = { version="3.2.22", features=["cargo"] }
tokio = { version = "1.15.0", features = ["rt"] }
dirs= "4.0.0"
zip = "0.6.3"
walkdir = "2.3.2"
